})


app.get('/user',(req,resp)=>{
  resp.send("<h1>Hello User page</h1>")
})

route.get('/contact',(req,resp)=>{
  resp.send("<h1>Hello contact page</h1>")
})

//ab mujai route contact or about page per lagu karnai h to hum app.get ki jagah route.get kar degai

app.use('/',route)  //or yai line lkhni h last mai 





lecture -27 Install mongoDB
step1 - serach download mongoDB and 
step2 - click Mongodb Community download
step3 - download Mongodb Community server in msi
step4 - download mongoDB shell for server
step5 - open cmd and run command mongod if it direct to path and show error 
step6- create data folder in c directory this data folder create db folder 
step7 - run command mongod if not direct to starting path server is run 
step8 - run mongosh (powershell command)

leccture - 30 
   connect Mongodb with node js

step1 = serach mongodb npm  - and then you will write npm i mongodb

step2 = go there documentation and read it that how it connect


lecture31 - Read data from Mongodb
            hum db collection ki alag sai file banaigai 
            because last lecture we had connect databse 
            suppose we want to create many functions for many difference database
            again and again we will not create database  because it take time cunsuming process but does not take enough time only 
            take 3 to 5 microsec 
            but compare to other code ,he take time so we keep only one collection

         i have one query in my mind,how i will create db.collection  file
         answer its simple  - 
         step1 - create file mongodb.js
         step2  - break index.js code in functions so that you don't confuze




lecture 32 - in this lecture we have create insert file for insert data nodejs to mongoDB
 lecture 33 - in this lecture data have updated using node js to mongoDB
 lecture -34 - this lecture , we have created delete.js file and data has deleted by using deleted method deletedMany
 
















