@@ -1,0 +1,19 @@
+const express = require('express')
+const {dbConnect} = require('./mongodb') 
+const app = express();
+
+app.get('/',async(req,resp)=>{
+    let data = await dbConnect()
+    data = await data.find().toArray();
+    console.log(data)
+    //resp.send({name:"anil"})
+      resp.send(data)                //basic api with mongodb
+})
+
+app.listen(5000)
+
+
+
+
+
+
